--- a/01-10-project/package.json
+++ b/01-10-project/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "01-10-project",
+  "name": "webpack",
   "version": "1.0.0",
   "description": "",
-  "main": "root.js",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack",
-    "dev": "webpack-dev-server"
+    "server": "webpack-dev-server --open",
+    "dev": "set type=dev&webpack",
+    "build": "set type=build&webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "antd": "^3.1.1",
+    "autoprefixer": "^7.2.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-import": "^1.6.3",
-    "babel-plugin-react-html-attrs": "^2.1.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babelify": "^8.0.0",
     "css-loader": "^0.28.8",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "html-withimg-loader": "^0.1.16",
+    "jquery": "^3.2.1",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.10",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-mixin": "^2.0.2",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.10.0"
+    "webpack-dev-server": "^2.10.1"
   }
 }
