--- a/01-16/.babelrc
+++ b/01-16/.babelrc
@@ -2,5 +2,9 @@
   "presets": [
     "react",
     "env"
+  ],
+  "plugins": [
+    "react-html-attrs",
+    ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
   ]
 }
