--- a/01-16/package.json
+++ b/01-16/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "antd": "^3.1.3",
     "autoprefixer": "^7.2.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.6.3",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.8",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "html-withimg-loader": "^0.1.16",
