--- a/01-16/package.json
+++ b/01-16/package.json
@@ -20,10 +20,12 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.8",
+    "fetch": "^1.1.0",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "html-withimg-loader": "^0.1.16",
     "jquery": "^3.2.1",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.10",
     "purify-css": "^1.2.5",
