--- a/01-18-small/package.json
+++ b/01-18-small/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.8",
     "fetch": "^1.1.0",
     "file-loader": "^1.1.6",
@@ -28,6 +29,7 @@
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-responsive": "^4.0.3",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
@@ -35,5 +37,8 @@
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.1",
     "webpack-parallel-uglify-plugin": "^1.0.2"
+  },
+  "dependencies": {
+    "react-responsive": "^4.0.3"
   }
 }
