--- a/antd-demo/package.json
+++ b/antd-demo/package.json
@@ -18,8 +18,10 @@
     "babel-plugin-import": "^1.6.3",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "fetch": "^1.1.0",
+    "jquery": "^3.3.1",
     "react-app-rewire-less": "^2.1.0",
     "react-app-rewired": "^1.4.0",
-    "react-responsive": "^4.0.3"
+    "react-responsive": "^4.0.3",
+    "react-router-dom": "^4.2.2"
   }
 }
